Fix page jumping

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -170,6 +170,17 @@ a, a:visited {
   }
 }
 
+// Main content wrapper styles
+.page-content {
+  padding: 95px 0 35px 0;
+}
+
+@include media-query($on-palm) {
+  .page-content {
+    padding: 110px 0 35px 0;
+  }
+}
+
 // Footer styles
 
 .site-footer {
@@ -352,7 +363,7 @@ a, a:visited {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  margin: 30px 0 60px 0;
+  margin: 30px 0 0 0;
 
   .person-card {
     display: flex;
